--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
   <meta http-equiv="x-dns-prefetch-control" content="on">
   <link rel="shortcut icon" href="https://static.tildacdn.com/tild3965-3033-4635-b133-386662396262/favicon_1.ico"
     type="image/x-icon" /><!-- Assets -->
-  <script src="js/tilda-fallback-1.0.min.js" charset="utf-8" async></script>
-  <link rel="stylesheet" href="css/tilda-grid-3.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />
-  <link rel="stylesheet" href="css/block.css" type="text/css" media="all" onerror="this.loaderr='y';" />
-  <link rel="stylesheet" href="css/tilda-animation-2.0.min.css" type="text/css" media="all"
+  <script src="./js/tilda-fallback-1.0.min.js" charset="utf-8" async></script>
+  <link rel="stylesheet" href="./css/tilda-grid-3.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />
+  <link rel="stylesheet" href="./css/block.css" type="text/css" media="all" onerror="this.loaderr='y';" />
+  <link rel="stylesheet" href="./css/tilda-animation-2.0.min.css" type="text/css" media="all"
     onerror="this.loaderr='y';" />
-  <link rel="stylesheet" href="css/tilda-popup-1.1.min.css" type="text/css" media="print" onload="this.media='all';"
+  <link rel="stylesheet" href="./css/tilda-popup-1.1.min.css" type="text/css" media="print" onload="this.media='all';"
     onerror="this.loaderr='y';" /><noscript>
-    <link rel="stylesheet" href="css/tilda-popup-1.1.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="./css/tilda-popup-1.1.min.css" type="text/css" media="all" />
   </noscript>
-  <link rel="stylesheet" href="css/tilda-forms-1.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />
-  <link rel="stylesheet" href="css/tilda-slds-1.4.min.css" type="text/css" media="print" onload="this.media='all';"
+  <link rel="stylesheet" href="./css/tilda-forms-1.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />
+  <link rel="stylesheet" href="./css/tilda-slds-1.4.min.css" type="text/css" media="print" onload="this.media='all';"
     onerror="this.loaderr='y';" /><noscript>
-    <link rel="stylesheet" href="css/tilda-slds-1.4.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="./css/tilda-slds-1.4.min.css" type="text/css" media="all" />
   </noscript>
-  <link rel="stylesheet" href="css/tilda-catalog-1.1.min.css" type="text/css" media="print" onload="this.media='all';"
+  <link rel="stylesheet" href="./css/tilda-catalog-1.1.min.css" type="text/css" media="print" onload="this.media='all';"
     onerror="this.loaderr='y';" /><noscript>
-    <link rel="stylesheet" href="css/tilda-catalog-1.1.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="./css/tilda-catalog-1.1.min.css" type="text/css" media="all" />
   </noscript>
-  <link rel="stylesheet" href="css/tilda-zero-gallery-1.0.min.css" type="text/css" media="all"
+  <link rel="stylesheet" href="./css/tilda-zero-gallery-1.0.min.css" type="text/css" media="all"
     onerror="this.loaderr='y';" />
-  <link rel="stylesheet" href="css/tilda-zoom-2.0.min.css" type="text/css" media="print" onload="this.media='all';"
+  <link rel="stylesheet" href="./css/tilda-zoom-2.0.min.css" type="text/css" media="print" onload="this.media='all';"
     onerror="this.loaderr='y';" /><noscript>
-    <link rel="stylesheet" href="css/tilda-zoom-2.0.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="./css/tilda-zoom-2.0.min.css" type="text/css" media="all" />
   </noscript>
   <script
     type="text/javascript">(function (d) {
@@ -72,27 +72,27 @@
           }, (time || 100));
         }
       } function t_throttle(fn, threshhold, scope) { return function () { fn.apply(scope || this, arguments); }; } function t396_initialScale(t) { var e = document.getElementById("rec" + t); if (e) { var r = e.querySelector(".t396__artboard"); if (r) { var a, i = document.documentElement.clientWidth, l = [], d = r.getAttribute("data-artboard-screens"); if (d) { d = d.split(","); for (var o = 0; o < d.length; o++)l[o] = parseInt(d[o], 10) } else l = [320, 480, 640, 960, 1200]; for (o = 0; o < l.length; o++) { var n = l[o]; n <= i && (a = n) } var g = "edit" === window.allrecords.getAttribute("data-tilda-mode"), u = "center" === t396_getFieldValue(r, "valign", a, l), c = "grid" === t396_getFieldValue(r, "upscale", a, l), t = t396_getFieldValue(r, "height_vh", a, l), f = t396_getFieldValue(r, "height", a, l), e = !!window.opr && !!window.opr.addons || !!window.opera || -1 !== navigator.userAgent.indexOf(" OPR/"); if (!g && u && !c && !t && f && !e) { for (var s = parseFloat((i / a).toFixed(3)), _ = [r, r.querySelector(".t396__carrier"), r.querySelector(".t396__filter")], o = 0; o < _.length; o++)_[o].style.height = parseInt(f, 10) * s + "px"; for (var h = r.querySelectorAll(".t396__elem"), o = 0; o < h.length; o++)h[o].style.zoom = s } } } } function t396_getFieldValue(t, e, r, a) { var i = a[a.length - 1], l = r === i ? t.getAttribute("data-artboard-" + e) : t.getAttribute("data-artboard-" + e + "-res-" + r); if (!l) for (var d = 0; d < a.length; d++) { var o = a[d]; if (!(o <= r) && (l = o === i ? t.getAttribute("data-artboard-" + e) : t.getAttribute("data-artboard-" + e + "-res-" + o))) break } return l }</script>
-  <script src="js/jquery-1.10.2.min.js" charset="utf-8" onerror="this.loaderr='y';"></script>
-  <script src="js//tilda-scripts-3.0.min.js" charset="utf-8" defer onerror="this.loaderr='y';"></script>
-  <script src="js/block.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/lazyload-1.3.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-animation-2.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-popup-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-forms-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-zero-1.1.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-t635-typed-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-menu-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/hammer.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-slds-1.4.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-products-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-catalog-1.1.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-submenublocks-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-zero-gallery-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-animation-ext-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-animation-sbs-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-zoom-2.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-zero-scale-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
-  <script src="js/tilda-events-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/jquery-1.10.2.min.js" charset="utf-8" onerror="this.loaderr='y';"></script>
+  <script src="./js//tilda-scripts-3.0.min.js" charset="utf-8" defer onerror="this.loaderr='y';"></script>
+  <script src="./js/block.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/lazyload-1.3.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-animation-2.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-popup-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-forms-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-zero-1.1.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-t635-typed-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-menu-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/hammer.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-slds-1.4.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-products-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-catalog-1.1.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-submenublocks-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-zero-gallery-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-animation-ext-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-animation-sbs-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-zoom-2.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-zero-scale-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
+  <script src="./js/tilda-events-1.0.min.js" charset="utf-8" async onerror="this.loaderr='y';"></script>
 
   <script type="application/ld+json">
 {
